<resources>
    <string name="app_name">Corona Virus Tracker</string>
    <string name="hello_world">Corona Virus Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="str_add_stops">مستشفيات العزل</string>
    <string name="str_show_labs">المعامل المركزية</string>
    <string name="str_infection_detection">مصاب ام لا؟</string>
    <string name="str_cautions">الوقاية من فيروس كورونا</string>
    <string name="str_clear">اعادة تعيين الخريطة</string>
    <string name="str_swap_stops">المناطق المعزولة</string>
    <string name="str_btn_ok">OK</string>
    <string name="str_from_spinner">Source</string>
    <string name="str_to_spinner">Destination</string>
    <string name="lat">Source</string>
    <string name="lon">Destination</string>
    <string name="str_find_route">أوجد الطريق</string>
    <string name="str_find_visited_places">الاماكن التي زارها المريض</string>
    <string name="str_query_lable">Enter Patient ID:</string>
    <string name="str_btn_track">Track</string>
    <string name="person1">Patient 1</string>
    <string name="person2">Patient 2</string>
</resources>
