<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.narss.covid19.MainActivity">
    <item android:id="@+id/menu_add_stops"
        android:title="@string/str_add_stops"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/menu_swap_stops"
        android:title="@string/str_swap_stops"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/menu_show_labs"
        android:title="@string/str_show_labs"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/menu_find_route"
        android:title="@string/str_find_route"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/menu_clear"
        android:title="@string/str_clear"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>
